--- a/notebooks/netflix-top10.ipynb
+++ b/notebooks/netflix-top10.ipynb
@@ -241,6 +241,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "df.to_csv(r'..\\data\\netflix-daily-top-10.csv', sep=',', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
