--- a/notebooks/netflix-db.ipynb
+++ b/notebooks/netflix-db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -14,10 +14,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'..\\data\\netflix-rotten-tomatoes-metacritic-imdb.csv')"
+    "df1 = pd.read_csv(r'..\\data\\netflix-rotten-tomatoes-metacritic-imdb.csv')\n",
+    "df2 = pd.read_csv(r'..\\data\\netflix_titles.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 6095 entries, 0 to 6094\n",
+      "Data columns (total 41 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Title                  6095 non-null   object \n",
+      " 1   Genre                  5735 non-null   object \n",
+      " 2   Tags                   6071 non-null   object \n",
+      " 3   Languages              5547 non-null   object \n",
+      " 4   Series or Movie        6095 non-null   object \n",
+      " 5   Hidden Gem Score       5601 non-null   float64\n",
+      " 6   Country Availability   6086 non-null   object \n",
+      " 7   Runtime                6094 non-null   object \n",
+      " 8   Director               4073 non-null   object \n",
+      " 9   Writer                 4363 non-null   object \n",
+      " 10  Actors                 5611 non-null   object \n",
+      " 11  View Rating            3728 non-null   object \n",
+      " 12  IMDb Score             5601 non-null   float64\n",
+      " 13  Rotten Tomatoes Score  2210 non-null   float64\n",
+      " 14  Metacritic Score       1445 non-null   float64\n",
+      " 15  Awards Received        2213 non-null   float64\n",
+      " 16  Awards Nominated For   2881 non-null   float64\n",
+      " 17  Boxoffice              1181 non-null   object \n",
+      " 18  Release Date           5532 non-null   object \n",
+      " 19  Netflix Release Date   6095 non-null   object \n",
+      " 20  Production House       1661 non-null   object \n",
+      " 21  Netflix Link           6095 non-null   object \n",
+      " 22  IMDb Link              5403 non-null   object \n",
+      " 23  Summary                6094 non-null   object \n",
+      " 24  IMDb Votes             5601 non-null   float64\n",
+      " 25  Image                  6095 non-null   object \n",
+      " 26  Poster                 4685 non-null   object \n",
+      " 27  TMDb Trailer           2714 non-null   object \n",
+      " 28  Trailer Site           2714 non-null   object \n",
+      " 29  show_id                6095 non-null   object \n",
+      " 30  type                   6095 non-null   object \n",
+      " 31  title                  6095 non-null   object \n",
+      " 32  director               4101 non-null   object \n",
+      " 33  cast                   5607 non-null   object \n",
+      " 34  country                5670 non-null   object \n",
+      " 35  date_added             6093 non-null   object \n",
+      " 36  release_year           6095 non-null   int64  \n",
+      " 37  rating                 6093 non-null   object \n",
+      " 38  duration               6092 non-null   object \n",
+      " 39  listed_in              6095 non-null   object \n",
+      " 40  description            6095 non-null   object \n",
+      "dtypes: float64(7), int64(1), object(33)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.merge(\n",
+    "    df1,\n",
+    "    df2,\n",
+    "    how='inner',\n",
+    "    left_on='Title',\n",
+    "    right_on='title'\n",
+    ")\n",
+    "\n",
+    "df.info(10)"
    ],
    "metadata": {
     "collapsed": false,
@@ -74,7 +152,7 @@
     }
    ],
    "source": [
-    "df.info()"
+    "df1.info()"
    ],
    "metadata": {
     "collapsed": false,
@@ -97,7 +175,7 @@
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "df1.isnull().sum()"
    ],
    "metadata": {
     "collapsed": false,
@@ -121,7 +199,7 @@
     }
    ],
    "source": [
-    "df.sample(10)"
+    "df1.sample(10)"
    ],
    "metadata": {
     "collapsed": false,
@@ -136,7 +214,7 @@
    "outputs": [],
    "source": [
     "cols_to_drop = ['Metacritic Score', 'Boxoffice', 'Production House', 'Image', 'Poster', 'TMDb Trailer', 'Trailer Site', 'Netflix Link', 'IMDb Link', 'Rotten Tomatoes Score', 'Awards Received', 'Awards Nominated For']\n",
-    "df.drop(cols_to_drop, axis='columns', inplace=True)"
+    "df1.drop(cols_to_drop, axis='columns', inplace=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -181,7 +259,7 @@
     }
    ],
    "source": [
-    "df.info()"
+    "df1.info()"
    ],
    "metadata": {
     "collapsed": false,
@@ -204,7 +282,7 @@
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "df1.isnull().sum()"
    ],
    "metadata": {
     "collapsed": false,
@@ -228,7 +306,7 @@
     }
    ],
    "source": [
-    "df.describe()"
+    "df1.describe()"
    ],
    "metadata": {
     "collapsed": false,
